syntax = "proto3";

package com.keumbang.auth.grpc;
option java_package = "com.keumbang.resource.grpc";
option java_outer_classname = "AuthServiceProto";
option java_multiple_files = true;

service AuthService {
  rpc AuthenticateMember (AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string accessToken = 1;
}

enum Status {
  UNKNOWN = 0;
  FAILURE = -1;
  SUCCESS = 1;
}

message AuthResponse {
  Status status = 1;
  int64 id = 2;
  repeated string roles = 3;
}